--- a/package.json
+++ b/package.json
@@ -59,44 +59,44 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/bob": "^0.4.1",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "@semantic-release/changelog": "^3.0.2",
+    "@babel/core": "7.6.2",
+    "@babel/runtime": "7.6.2",
+    "@react-native-community/bob": "0.4.1",
+    "@react-native-community/eslint-config": "0.0.5",
+    "@semantic-release/changelog": "3.0.2",
     "@semantic-release/git": "7.0.8",
-    "@types/jest": "^24.0.12",
-    "@types/react-native": "^0.57.51",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0",
-    "babel-loader": "^8.0.6",
+    "@types/jest": "24.0.12",
+    "@types/react-native": "0.57.51",
+    "@typescript-eslint/eslint-plugin": "1.7.0",
+    "@typescript-eslint/parser": "1.7.0",
+    "babel-loader": "8.0.6",
     "detox": "17.14.9",
     "eslint": "5.16.0",
-    "eslint-config-prettier": "^4.2.0",
+    "eslint-config-prettier": "4.2.0",
     "eslint-plugin-prettier": "3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^2.3.0",
-    "jest": "^24.8.0",
-    "jest-expo": "^36.0.1",
-    "jest-fetch-mock": "^3.0.1",
-    "lint-staged": "^8.1.7",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "prettier": "^1.17.0",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "2.3.0",
+    "jest": "24.8.0",
+    "jest-expo": "36.0.1",
+    "jest-fetch-mock": "3.0.1",
+    "lint-staged": "8.1.7",
+    "metro-react-native-babel-preset": "0.56.0",
+    "prettier": "1.17.0",
     "react": "16.9.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "16.12.0",
     "react-native": "0.61.5",
     "react-native-macos": "0.60.0-microsoft.50",
-    "react-native-web": "^0.12.0",
+    "react-native-web": "0.12.0",
     "react-test-renderer": "16.9.0",
-    "rimraf": "^2.6.3",
+    "rimraf": "2.6.3",
     "semantic-release": "17.2.3",
-    "source-map-loader": "^0.2.4",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.4.1",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.2",
+    "source-map-loader": "0.2.4",
+    "ts-jest": "24.0.2",
+    "ts-loader": "6.2.1",
+    "typescript": "3.4.1",
+    "webpack": "4.41.5",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.10.2",
     "react-native-windows": "0.61.0",
     "metro": "0.56.0"
   },
